improve pom and build (#18)